Fixes for issues 52, 51, 48, 46, 45, 41, 40, 36